2002-07-06  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_changeaddr)  Log "subscribe" and
	"unsubscribe" events for subscriptions that are changed
	by the changeaddr command.

2002-07-04  Michael Yount <csf@moscow.com>

	* bin/mj_confirm, mj_wwwadm, mj_wwwusr, 
	lib/Majordomo.pm, lib/Mj/Format.pm:  Include the list
	name in the arguments when calling Majordomo::format_get_string.

2002-06-30  Michael Yount <csf@moscow.com>

	* Makefile.PL:  Add language choice support.

	* bin/mj_wwwadm:  The report command now has format file
	support.

	* lib/Mj/Format.pm:  (report)  Add format file support.

	* setup/ask_basic.pl:  Offer "fr" language option.
	Thanks to Mathieu Arnold.

	* setup/newdomain.pl:  Add language choice support.

2002-06-28  Michael Yount <csf@moscow.com>

	* lib/Mj/SimpleDB/MySql.pm:  New module, unfinished.
	Thanks to Racheli Neuberger.

	* setup/ask_basic.pl:  Allow the domain list to 
	be empty.

	* setup/newdomain.pl:  Fix domain name typo.  Thanks to
	Brock Rozen.

2002-06-26  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (new) Add domain validity test.
	(reject) Use "IP address" substitution for anonymous
	rejections.  Thanks to Mohamed Lrhazi and Nick Simicich.

	* lib/Mj/Inform.pm:  (_inform_owner)  Use "IP address"
	substitution for anonymous requesters.

	* setup/ask_domain.pl:  Fix typos.  Thanks to Brock Rozen.

	* setup/newdomain.pl:  Ask if the domain should be installed
	or just recorded in the .mj_config file.

2002-06-24  Michael Yount <csf@moscow.com>

	* Makefile.PL:  Move configuration questions into message
	files.  Increase the version number to 12.

	* postinstall:  Move installation messages into message
	files.

	* bin/mj_confirm, mj_wwwusr:  Allow customized "welcome"
	files to be displayed using the "doc" CGI parameter.
	For example, the CGI parameters func=welcome&doc=foo would 
	cause the "welcome_foo" file to be displayed.  The stock 
	welcome file will be displayed if the requested file is
	not found.
